hphp/test/zend/good/Zend/tests/access_modifiers_007.php.expectf

Fatal error: Class test contains an abstract method and must therefore be declared abstract in %s/access_modifiers_007.php on line 3
